fuel-core/src/config/snapshots/fuel_core__config__chain_config__tests__snapshot_contract_with_state.snap
---
source: fuel-core/src/config/chain_config.rs
expression: json
---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "initial_state": {
    "contracts": [
      {
        "code": "0x24400000",
        "salt": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "state": [
          [
            "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
            "0xc9fba417a2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00"
          ]
        ]
      }
    ]
  },
  "transaction_parameters": {
    "contract_max_size": 16777216,
    "max_inputs": 255,
    "max_outputs": 255,
    "max_witnesses": 255,
    "max_gas_per_tx": 100000000,
    "max_script_length": 1048576,
    "max_script_data_length": 1048576,
    "max_static_contracts": 255,
    "max_storage_slots": 255,
    "max_predicate_length": 1048576,
    "max_predicate_data_length": 1048576,
    "gas_price_factor": 1000000000
  }
}
