fuel-core/src/config/snapshots/fuel_core__config__chain_config__tests__snapshot_simple_contract.snap
---
source: fuel-core/src/config/chain_config.rs
expression: json
---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "initial_state": {
    "contracts": [
      {
        "code": "0x24400000",
        "salt": "0x0000000000000000000000000000000000000000000000000000000000000000"
      }
    ]
  },
  "transaction_parameters": {
    "contract_max_size": 16777216,
    "max_inputs": 255,
    "max_outputs": 255,
    "max_witnesses": 255,
    "max_gas_per_tx": 100000000,
    "max_script_length": 1048576,
    "max_script_data_length": 1048576,
    "max_static_contracts": 255,
    "max_storage_slots": 255,
    "max_predicate_length": 1048576,
    "max_predicate_data_length": 1048576,
    "gas_price_factor": 1000000000
  }
}
